# torchTS

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Lorenz63_fitRandomSample.mat  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml  torchts.html
.github/: dependabot.yml  labeler.yml
.github/actions/setup-torchts/: action.yml
.github/workflows/: docs.yml  labeler.yml  quality.yml  release.yml  security.yml  test.yml  update-pre-commit.yml
_modules/: index.html
_modules/torchts/: foo.html
_modules/torchts/core/: model.html
_modules/torchts/nn/: model.html
_sources/: torchts.rst.txt
_static/css/: custom.css
api/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  torchts.html
api/_modules/: index.html
api/_sources/: modules.rst.txt  torchts.rst.txt
api/_static/css/: custom.css
api/html/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  torchts.html
api/html/_modules/: index.html
assets/css/: styles.22ee40b8.css
assets/js/: 0e384e19.0cb91d8a.js  0e384e19.2282bb3f.js  0e384e19.32c78e8b.js  0e384e19.368048b0.js  0e384e19.3e0bd267.js  0e384e19.40643224.js  0e384e19.42eedd96.js  0e384e19.473b4a8a.js  0e384e19.475351c9.js  0e384e19.573dff67.js  0e384e19.69915386.js  0e384e19.6a1ddd5b.js  0e384e19.6c6ed1b0.js  0e384e19.6fb48497.js  0e384e19.770467a7.js  0e384e19.891e9a88.js  0e384e19.8a27cc75.js  0e384e19.90b81941.js  0e384e19.99c7cff6.js  0e384e19.9e28084a.js  0e384e19.9f805b5d.js  0e384e19.a8d59fc7.js  0e384e19.b3f00332.js  0e384e19.c3353f50.js  0e384e19.c4918870.js  0e384e19.c693de52.js  0e384e19.d6f71305.js  0e384e19.dd2a8e0b.js  0e384e19.deb42f06.js  0e384e19.e1c59e77.js  0e384e19.e36bbdc5.js  0e384e19.e9738376.js  0e384e19.ef52e784.js  0e384e19.f39b9144.js  0e384e19.f54e4014.js  0e384e19.fb536857.js  16ed6512.0be5d3a2.js  16ed6512.0d96cb6d.js  16ed6512.15f28048.js  16ed6512.407a5c53.js  (+396 more)
docs/: index.html
docs/autoode/: index.html
docs/autoregressive/: index.html
docs/convolutional-lstm/: index.html
docs/diffusion-convolutional-lstm/: index.html
docs/hybrid-autoode/: index.html
docs/mis-regression/: index.html
docs/quantile-regression/: index.html
docs/seq2seq-GRU/: index.html
docs/seq2seq-gru/: index.html
docs/seq2seq-lstm/: index.html
docs/source/: build_your_own_model.rst  conf.py  contributing.rst  getting_started.rst  index.rst  installation.rst  torchts.nn.loss.rst  torchts.nn.rst  torchts.rst  torchts.utils.data.rst  torchts.utils.rst
docs/source/_templates/: theme_variables.jinja
docs/source/torchts.nn/: dcrnn.rst  index.rst  seq2seq.rst
docs/stochastic-gradient-mcmc/: index.html
docs/vector/: index.html
docs/vector-autoregressive/: index.html
examples/dcrnn/: Adjacency Matrix & Training data.ipynb  README.md  main.py  main_distributed.py  requirements.txt
examples/mis-regression/: README.md  lstm-mis-regression.ipynb
examples/ode/: README.md  SEIR model with ODESolver.ipynb
examples/ode/DuffingEquation/: Cos_wt_fitRandomSample.ipynb  Cos_wt_sin_dataset_fitRandomSample.ipynb  Cos_wx_fitRandomSample.ipynb  DuffingTest_DNN.ipynb  DuffingTest_HybridODE.ipynb  DuffingTest_class_fit.ipynb  DuffingTest_fit.ipynb  DuffingTest_fitRandomSample.ipynb  DuffingTest_fitRandomSample_with_w.ipynb  (+6 more)
examples/quantile-regression/: README.md  conformal-quantile-regressio_fix.ipynb  conformal-quantile-regression.ipynb  conformal-quantile-regression_example.ipynb  conformal-quantile-timeseries_example.ipynb  lstm-quantile-regression.ipynb
examples/seq2seq/: End-to-end pipeline with Caltrans Traffic Dataset  End2end pipeline with traffic dataset (GPU Tesla T4, Train 25mins).ipynb  End2end pipeline with traffic dataset (GPU Tesla T4, Train 25mins)_newDataLoader.ipynb
examples/simple_lstm/: lstm.py  lstm_with_uq_experiment.ipynb  pipeline.py  requirements.txt
scripts/: build_docs.sh  tutorials.sh
source/: modules.rst
tests/: test_lagmat.py  test_model.py  test_sliding_window.py
tests/nn/: test_loss.py  test_ode.py
torchts/: foo.py
torchts/core/: model.py
torchts/nn/: graph.py  loss.py  model.py
torchts/utils/: data.py  dataloader.ipynb  dataloader.py  dataloader_v0.3.py  graph.py
website/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebarsTutorials.js
website/docs/: intro.md
website/tutorials/: intro.md
(+71 files in other folders)
